package com.mgriffin.order;

public interface Billable {

    double getPrice();

}
