package com.mgriffin.order;

public class Customer {

    private String name;

    public Customer (String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }
}
