package com.mgriffin.order;

public enum OrderEvents {
    ADD_COFFEE,
    ADD_MILK,
    ADD_CONDIMENTS,
    COMPLETE_ORDER;
}