package com.mgriffin.order;

public enum OrderStates {
    WAITING,
    COFFEE_ADDED,
    MILK_ADDED,
    CONDIMENTS_ADDED,
    COMPLETED
}
